<resources>
    <string name="app_name">NeedFood</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_brand_detail">BrandDetail</string>
    <string name="raw">Raw food</string>
    <string name="vege">Vegetable</string>
    <string name="dissmiss">Dissmiss to use time shipping</string>
    <string name="food">Food</string>
    <string name="acid">Account ID\u0020</string>
    <string name="emailc">Email address</string>
    <string name="phone">Mobile phone\u0020</string>
    <string name="address">Address contact\u0020</string>
    <string name="save">Save</string>
    <string name="change">Change</string>
    <string name="buy0">Buy with 9k</string>
    <string name="ok">Ok</string>
    <string name="thefree">The free food will ship in\u0020</string>
    <string name="adm">Add more</string>
    <string name="viewmore">View more</string>
    <string name="ypr">Your property</string>
    <string name="ypr2">Your property:\u0020</string>
    <string name="transuc">Transfer successful</string>
    <string name="send">Send</string>
    <string name="entercoin">Enter coins</string>
    <string name="enamout">Enter amount of coin using</string>
    <string name="coins">Coins</string>
    <string name="coins2">Coins:\u0020</string>
    <string name="notquan">Sorry, inventory is not enough</string>
    <string name="paym">Payment</string>
    <string name="changepass">Change Password</string>
    <string name="more">More</string>
    <string name="yourin">Your Information</string>
    <string name="buynow">Buy Now</string>
    <string name="precart">Preview And Edit The Cart</string>
    <string name="fruits">Fruits</string>
    <string name="setuptime">Setup receiving time:\u0020</string>
    <string name="deli">Delivery:\u0020</string>
    <string name="ext">Extra applied for product</string>
    <string name="shipping">Shipping</string>
    <string name="prc">Process</string>
    <string name="drink">Drink</string>
    <string name="brandprs">Brand`s products</string>
    <string name="item">Items</string>
    <string name="noprd">Sorry, no products were found on the system</string>
    <string name="nomal">No manual</string>
    <string name="menu">Menu</string>
    <string name="cancel">Cancel</string>
    <string name="oldp">Old password</string>
    <string name="shipmn">Money ship</string>
    <string name="shipmn2">Money ship:</string>
    <string name="newp">Enter new password</string>
    <string name="conpass">Confirm password</string>
    <string name="repass">Reenter password</string>
    <string name="comment">Comment</string>
    <string name="prd">Pruduct\u0020</string>
    <string name="er">Error</string>
    <string name="shipto">Ship to</string>
    <string name="promo">Promotion Code</string>
    <string name="phonenum">Phone number</string>
    <string name="email">Email:\u0020</string>
    <string name="concode">Confirmation code</string>
    <string name="next">Next</string>
    <string name="vericode">Confirmation code has been sent to your email</string>
    <string name="promo2">Promotion Code</string>
    <string name="login">Login</string>
    <string name="lan">Language</string>
    <string name="regiss">Register</string>
    <string name="aro">Find around</string>
    <string name="forget">Forgot password</string>
    <string name="Deal">Deal</string>
    <string name="fb_login_protocol_scheme">fb144493206000726</string>
    <string name="productoften">Products often bought together</string>
    <string name="procomt">Component of the product</string>
    <string name="inven">Inventory</string>
    <string name="inven2">Inventory:\u0020</string>
    <string name="changeadr">Click on the map to change the address</string>
    <string name="usname">User name</string>
    <string name="pass">Password</string>
    <string name="quanlity">Quantity</string>
    <string name="quanlity2">Quanlity:\u0020</string>
    <string name="total">Total:\u0020</string>
    <string name="facebook_app_id">144493206000726</string>
    <string name="newfeed">New Feed</string>
    <string name="lostss">The login session has ended, please log in again</string>
    <string name="usingc">Using coin</string>
    <string name="topdeal">Top - Deal</string>
    <string name="dontvmt">Dont have any comment</string>
    <string name="by">By\u0020</string>
    <string name="besqua">Best Quality</string>
    <string name="sugg">Suggestion</string>
    <string name="messel">Message to seller</string>
    <string name="notif">Notification</string>
    <string name="succ">Success</string>
    <string name="emailwr">Email invalidate</string>
    <string name="order">Order</string>
    <string name="name">Name:\u0020</string>
    <string name="tax2">Tax:</string>
    <string name="tax">Tax</string>
    <string name="phonenum2">Phone:\u0020</string>
    <string name="wait">Waiting...</string>
    <string name="wrreg">Can not be empty</string>
    <string name="wrpass">Confirm password don\'t match</string>
    <string name="shortpass">Password must be 6 characters or more</string>
    <string name="contact">Contact</string>
    <string name="shiptime">Shipping time</string>
    <string name="rein">Receiver\'s information</string>
    <string name="giam">Discount:</string>
    <string name="orif">Order info</string>
    <string name="orcode">Order code</string>
    <string name="listprd">List products</string>
    <string name="howtou">How to use?</string>
    <string name="qrc">Scan product QR code</string>
    <string name="prddetail">Product detail</string>
    <string name="conor">Confirm the order</string>
    <string name="edcart">Edit cart</string>
    <string name="phonee">Phone number has exsis</string>
    <string name="note">Note</string>
    <string name="needvote">Vote by NeedFood:\u0020</string>
    <string name="search">Search...</string>
    <string name="tranhis">Transfer history</string>
    <string name="younotacc">You not agreed with the Customer regulations</string>
    <string name="accus">I agreed the Customer regulations</string>
    <string name="action_settings">Settings</string>
    <string name="hisord">Order history</string>
    <string name="ssor">Order Success</string>
    <string name="linklogfb">http://needfood.webmantan.com/checkRegisterFacebookAPI</string>
    <string name="linkselling">http://needfood.webmantan.com/getProductSellingOutAPI</string>
    <string name="linktranf">http://needfood.webmantan.com/changeCoinAPI</string>
    <string name="linkgetcoin">http://needfood.webmantan.com/getInfoUserAPI</string>
    <string name="linkorder">http://needfood.webmantan.com/saveOrderAPI</string>
    <string name="linksug">http://needfood.webmantan.com/getProductSuggestionAPI</string>
    <string name="linkspch">http://needfood.webmantan.com/getProductManufacturerAPI</string>
    <string name="linkprcom">http://needfood.webmantan.com/getProductComponentAPI</string>
    <string name="linkprdat">http://needfood.webmantan.com/getProductAttachAPI</string>
    <string name="linkifsel">http://needfood.webmantan.com/getInfoSellerAPI</string>
    <string name="linkbest">http://needfood.webmantan.com/getProductBestAPI</string>
    <string name="linknew">http://needfood.webmantan.com/getProductNewAPI</string>
    <string name="linkprdde">http://needfood.webmantan.com/getProductAPI</string>
    <string name="linkgetnum">http://needfood.webmantan.com/getNumberShareAPI</string>
    <string name="linkgetShipper">http://needfood.webmantan.com/checkInfoShiperAPI</string>
    <string name="linkgetnumberbuy">http://needfood.webmantan.com/getNumberOrderDoneAPI</string>
    <string name="linkmn">http://needfood.webmantan.com/getTypeMoneyAPI</string>
    <string name="linkprdsell">http://needfood.webmantan.com/getProductSellerAPI</string>
    <string name="linklogout">http://needfood.webmantan.com/checkLogoutUseronlAPI</string>
    <string name="linkshare">http://needfood.webmantan.com/saveShareHotDealAPI</string>
    <string name="linkprdcata">http://needfood.webmantan.com/getProductCategoryAPI</string>
    <string name="linksavecmt">http://needfood.webmantan.com/saveCommentSellerAPI</string>
    <string name="linkgetcmt">http://needfood.webmantan.com/getCommentSellerAPI</string>
    <string name="linkreg">http://needfood.webmantan.com/checkRegisterUseronlAPI</string>
    <string name="linklogin">http://needfood.webmantan.com/checkLoginUseronlAPI</string>
    <string name="linkchangep">http://needfood.webmantan.com/changePassUseronlAPI</string>
    <string name="linksearch">http://needfood.webmantan.com/searchProductAPI</string>
    <string name="linkgetcode">http://needfood.webmantan.com/sendCodePassUseronlAPI</string>
    <string name="linktypecode">http://needfood.webmantan.com/sendPassUseronlAPI</string>
    <string name="linkupdate">http://needfood.webmantan.com/updateInfoUseronlAPI</string>
    <string name="linkorhis">http://needfood.webmantan.com/getHistoryOrderAPI</string>
    <string name="linkhotdeal">http://needfood.webmantan.com/getHotDealProductAPI</string>
    <string name="linkrolesell">http://needfood.webmantan.com/getRoleSellerAPI</string>
    <string name="linkroleuser">http://needfood.webmantan.com/getRoleUserAPI</string>
    <string name="linksavecm">http://needfood.webmantan.com/saveCommentProductAPI</string>
    <string name="linkgetcm">http://needfood.webmantan.com/getCommentProductAPI</string>
    <string name="linksavecmpr">http://needfood.webmantan.com/saveCommentProductAPI</string>
    <string name="linkgetcmpr">http://needfood.webmantan.com/getCommentProductAPI</string>
    <string name="linkgetselleraround">http://needfood.webmantan.com/getSellerAroundAPI</string>
    <string name="linkhiscoin">http://needfood.webmantan.com/getHistoryCoinAPI</string>
    <string name="linksavetoken">http://needfood.webmantan.com/saveTokenDeviceAPI</string>
    <string name="linkgetinfo">http://needfood.webmantan.com/getInfoUserAPI</string>
    <string name="linksaveShare">http://needfood.webmantan.com/saveShareHotDealAPI</string>
    <string name="linkvote">http://needfood.webmantan.com/updateVoteProductAPI</string>
    <string name="linktimenow">http://needfood.webmantan.com/getTimeServerAPI</string>
    <string name="linkgetdiscountadmin">http://needfood.webmantan.com/checkDiscountAdminAPI</string>
    <string name="linkupdateViewProductAPI">http://needfood.webmantan.com/updateViewProductAPI</string>
    <string name="linkupdateViewSellerAPI">http://needfood.webmantan.com/updateViewSellerAPI</string>
    <string name="linkshipper">http://needfood.webmantan.com/checkInfoShiperAPI</string>
    <string name="linkvotshiper">http://needfood.webmantan.com/updateVoteShiperAPI</string>
    <string name="linkvoteseller">http://needfood.webmantan.com/updateVoteSellerAPI</string>
    <string name="linkreport">http://needfood.webmantan.com/saveReportProductAPI</string>
    <string name="linkInforo">http://needfood.webmantan.com/getInfoOrderAPI</string>
    <string name="linkReportSeller">http://needfood.webmantan.com/saveReportSellerAPI</string>
    <string name="linkFeedback">http://needfood.webmantan.com/saveFeedbackAPI</string>
    <string name="tit">Title</string>
    <string name="contre">Report content</string>
    <string name="policy">By clicking on the subscription you agree to our user and seller policies</string>
    <string name="sento">Send to:</string>
    <string name="coinn">Coins: \u0020</string>
    <string name="prcode">Enter promotion code</string>
    <string name="canc">Close</string>
    <string name="fn">Full Name</string>
    <string name="pa">Password requires at least 6 characters</string>
    <string name="cpas">Confirm Password</string>
    <string name="ad">Address</string>
    <string name="ycc">Your current cents: \u0020</string>
    <string name="bcoin">By Coins</string>
    <string name="bmoney">By Money</string>
    <string name="nxx">Pay with Coins</string>
</resources>