<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.ChangePass">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/oldpass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@color/gray"
                android:hint="@string/oldp"
                android:inputType="textPassword"
                android:padding="5dp" />

            <EditText
                android:id="@+id/newpass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@color/gray"
                android:hint="@string/newp"
                android:inputType="textPassword"
                android:padding="5dp" />

            <EditText
                android:id="@+id/newpassagain"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@color/gray"
                android:hint="@string/repass"
                android:inputType="textPassword"
                android:padding="5dp" />

            <Button
                android:id="@+id/btnChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cusbtnred"
                android:text="@string/change"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
