<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/gray2"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <WebView
        android:id="@+id/webview1"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></WebView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="5dp"
            android:layout_margin="10dp"
            android:id="@+id/edtitle"
            android:hint="@string/tit"
            android:background="@color/white"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/contre"
            android:id="@+id/edcont"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:gravity="top"
            android:background="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cusbtnred"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:layout_marginRight="5dp"
                android:id="@+id/btnok"
                android:layout_weight="1"/>
            <Button
                android:layout_width="match_parent"
                android:background="@drawable/cusbtnred"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:id="@+id/btncancel"
                android:layout_weight="1"/>

        </LinearLayout>
        </LinearLayout>

</LinearLayout>