<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Login.Register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            layout="@layout/toolbar"
            ></include>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/gray"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:id="@+id/tvfn"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/us"
                android:layout_marginBottom="10dp"
                android:hint="@string/fn"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/gray"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:id="@+id/tvem"
                android:inputType="textEmailAddress"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/mail"
                android:layout_marginBottom="10dp"
                android:hint="Email"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/gray"
                android:padding="5dp"
                android:id="@+id/tvf"
                android:gravity="center_vertical"
                android:inputType="number"
                android:drawablePadding="5dp"
                android:maxLength="11"
                android:drawableLeft="@drawable/phone"
                android:layout_marginBottom="10dp"
                android:hint="@string/phone"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/gray"
                android:id="@+id/tvp"
                android:padding="5dp"
                android:inputType="textPassword"
                android:gravity="center_vertical"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/lock"
                android:layout_marginBottom="10dp"
                android:hint="@string/pa"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/gray"
                android:padding="5dp"
                android:id="@+id/tvpa"
                android:gravity="center_vertical"
                android:drawablePadding="5dp"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/lock"
                android:layout_marginBottom="10dp"
                android:hint="@string/cpas"
                />
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/tvadr"
                android:layout_height="40dp"
                android:background="@color/gray"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/adr"
                android:layout_marginBottom="10dp"
                android:hint="@string/ad"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:id="@+id/policy"
                    android:textColor="@color/blue"
                    android:textStyle="italic"
                    android:layout_marginBottom="10dp"
                    android:text="@string/policy"/>


            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnreg"
                android:background="@drawable/cusbtnred"
                android:textColor="@color/white"
                android:text="@string/regiss"/>

        </LinearLayout>
        </ScrollView>


    </LinearLayout>

</RelativeLayout>
